[package]
name = "advent-2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.5"
ndarray = "0.15.6"

[dev-dependencies]
pretty_assertions = "1.3.0"
